# why-dot-fun

./: .env.example  .gitignore  Cargo.toml  Config.toml  Config.toml.example  Dockerfile  README.md
migrations/: 20241113102717_1.down.sql  20241113102717_1.up.sql
src/: cache.rs  database.rs  main.rs  secrets.rs  twilio_token.rs
src/api/: activate_sponsor.rs  attempt_list.rs  attempt_single.rs  deposit.rs  launchpad.rs  mod.rs  payment.rs  sponsor_list.rs  update_sponsor.rs  verify_winner.rs
src/claim/: mod.rs
src/crypto/: keys.rs  transfer.rs
src/game/: challenge.rs  end.rs  judge.rs  name.rs  recording.rs  start.rs
src/review/: mod.rs  twitter.rs
src/solana/: generate_deposit.rs  generate_payment.rs  keys.rs  mod.rs  transfer.rs  verify_deposit.rs  verify_payment.rs
src/video/: background.rs  mod.rs
src/webcall/: check.rs  mod.rs
static/: call.css  call.html  call.js  review.css  review.html  review.js
templates/: review.html
twilio/: README.md
twilio/src/: twiml.rs
