[package]
name = "gamecall"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"
async-openai = "0.26"
axum = "0.7"
axum-extra = { version = "0.9", features = ["cookie"] }
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
reqwest = "0.12"
reqwest-oauth1 = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
srtlib = "0.2"
static-toml = "1.2"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1.41", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }
twilio = { git = "https://github.com/Nelis-sol/new-twilio.git" }
twitter-v2 = "0.1"
